--- a/src/project3/sample.fxml
+++ b/src/project3/sample.fxml
@@ -10,45 +10,49 @@
 
 <GridPane alignment="center" hgap="10" prefHeight="415.0" prefWidth="712.0" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project3.Controller">
    <children>
-      <TabPane prefHeight="418.0" prefWidth="487.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane fx:id="tabPane" prefHeight="418.0" prefWidth="487.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text="Login Screen">
+          <Tab fx:id="loginscreenTab" text="Login Screen">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="380.0" prefWidth="487.0">
                      <children>
                         <TextField fx:id="usernameTextField" layoutX="94.0" layoutY="101.0" prefHeight="25.0" prefWidth="300.0" />
-                        <TextField fx:id="passwordTextField" layoutX="94.0" layoutY="130.0" prefHeight="25.0" prefWidth="300.0" />
                         <Label layoutX="25.0" layoutY="105.0" text="Username:" />
                         <Label layoutX="27.0" layoutY="134.0" text="Password:" />
                         <Button fx:id="loginButton" layoutX="221.0" layoutY="168.0" mnemonicParsing="false" onAction="#doLoginButton" text="Login" />
-                        <TextArea fx:id="myTextArea" layoutX="153.0" layoutY="211.0" prefHeight="88.0" prefWidth="200.0" />
+                        <PasswordField fx:id="passwordTextField" layoutX="94.0" layoutY="130.0" prefHeight="25.0" prefWidth="300.0" />
                      </children>
                   </AnchorPane>
             </content>
           </Tab>
-          <Tab text="System Administrator">
+          <Tab fx:id="systemAdminTab" disable="true" text="System Administrator">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="318.0" prefWidth="507.0">
+              <AnchorPane fx:id="AnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="318.0" prefWidth="507.0">
                      <children>
                         <Button fx:id="createAccountButton" layoutX="358.0" layoutY="14.0" mnemonicParsing="false" onAction="#doCreateAccount" text="Create Account" />
                         <Button fx:id="deleteAccountButton" layoutX="358.0" layoutY="76.0" mnemonicParsing="false" onAction="#doDeleteAccount" text="Delete Account" />
                         <Button fx:id="resetPasswordButton" layoutX="358.0" layoutY="46.0" mnemonicParsing="false" onAction="#doResetPassword" text="Reset Password" />
                         <TextField fx:id="lastNameAdminText" layoutX="167.0" layoutY="46.0" />
-                        <TextField fx:id="usernameAdminText" layoutX="167.0" layoutY="76.0" />
-                        <TextField fx:id="emailAdminText" layoutX="167.0" layoutY="142.0" />
+                        <TextField fx:id="usernameAdminText" layoutX="167.0" layoutY="171.0" />
+                        <TextField fx:id="emailAdminText" layoutX="169.0" layoutY="142.0" />
                         <TextField fx:id="firstNameAdminText" layoutX="167.0" layoutY="14.0" />
-                        <TextArea fx:id="myTextAreaAdminText" layoutX="87.0" layoutY="180.0" prefHeight="181.0" prefWidth="310.0" />
+                        <TextArea fx:id="myTextAreaAdminText" layoutX="87.0" layoutY="247.0" prefHeight="114.0" prefWidth="310.0" />
                         <Label layoutX="98.0" layoutY="18.0" text="First Name:" />
                         <Label layoutX="99.0" layoutY="50.0" text="Last Name:" />
                         <Label layoutX="80.0" layoutY="146.0" text="Email Address:" />
-                        <Label layoutX="101.0" layoutY="80.0" text="Username:" />
-                        <TextField fx:id="passwordAdminText" layoutX="167.0" layoutY="108.0" />
-                        <Label layoutX="105.0" layoutY="112.0" text="Password:" />
+                        <Label layoutX="100.0" layoutY="175.0" text="Username:" />
+                        <TextField fx:id="passwordAdminText" layoutX="167.0" layoutY="200.0" />
+                        <Label layoutX="103.0" layoutY="204.0" text="Password:" />
+                        <Button fx:id="LogoutButton1" layoutX="380.0" layoutY="108.0" mnemonicParsing="false" onAction="#doLogoutButton1" text="Logout" />
+                        <TextField fx:id="phoneNumberAdminText" layoutX="169.0" layoutY="76.0" />
+                        <TextField fx:id="ageAdminText" layoutX="169.0" layoutY="108.0" />
+                        <Label layoutX="77.0" layoutY="80.0" text="Phone Number:" />
+                        <Label layoutX="129.0" layoutY="112.0" text="Age:" />
                      </children>
                   </AnchorPane>
             </content>
           </Tab>
-            <Tab text="Sales Associate">
+            <Tab fx:id="salesAssociateTab" disable="true" text="Sales Associate">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
@@ -71,11 +75,12 @@
                         <Label layoutX="34.0" layoutY="176.0" text="On Sale:" />
                         <Label layoutX="261.0" layoutY="176.0" text="Quantity:" />
                         <TextArea fx:id="myTextAreaAssociateText" layoutX="20.0" layoutY="206.0" prefHeight="121.0" prefWidth="449.0" />
+                        <Button fx:id="LogoutButton2" layoutX="394.0" layoutY="45.0" mnemonicParsing="false" onAction="#doLogoutButton2" text="Logout" />
                      </children>
                   </AnchorPane>
               </content>
             </Tab>
-            <Tab text="Office Manager">
+            <Tab fx:id="officeManagerTab" disable="true" text="Office Manager">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
@@ -98,11 +103,12 @@
                         <Label layoutX="34.0" layoutY="176.0" text="On Sale:" />
                         <Label layoutX="261.0" layoutY="176.0" text="Quantity:" />
                         <TextArea fx:id="myTextAreaOfficeText" layoutX="20.0" layoutY="206.0" prefHeight="121.0" prefWidth="449.0" />
+                        <Button fx:id="LogoutButton3" layoutX="394.0" layoutY="45.0" mnemonicParsing="false" onAction="#doLogoutButton3" text="Logout" />
                      </children>
                   </AnchorPane>
                </content>
             </Tab>
-            <Tab text="Warehouse Manager">
+            <Tab fx:id="warehouseManagerTab" disable="true" text="Warehouse Manager">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
@@ -114,6 +120,7 @@
                         <Label layoutX="110.0" layoutY="71.0" text="Warehouse Name:" />
                         <Label layoutX="23.0" layoutY="104.0" />
                         <TextArea fx:id="myTextAreaWarehouseText" layoutX="19.0" layoutY="121.0" prefHeight="166.0" prefWidth="449.0" />
+                        <Button fx:id="LogoutButton4" layoutX="394.0" layoutY="49.0" mnemonicParsing="false" onAction="#doLogoutButton4" text="Logout" />
                      </children>
                   </AnchorPane>
                </content>
