--- a/src/project3/sample.fxml
+++ b/src/project3/sample.fxml
@@ -8,31 +8,110 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane alignment="center" hgap="10" prefHeight="415.0" prefWidth="712.0" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project3.Controller">
    <children>
-      <Pane prefHeight="526.0" prefWidth="503.0">
-         <children>
-            <Button fx:id="updateButton" layoutX="410.0" layoutY="24.0" mnemonicParsing="false" onAction="#doUpdateButton" text="Update" />
-            <Button fx:id="createButton" layoutX="412.0" layoutY="68.0" mnemonicParsing="false" onAction="#doCreateButton" text="Create" />
-            <Button fx:id="moveButton" layoutX="414.0" layoutY="146.0" mnemonicParsing="false" onAction="#doMoveButton" text="Move" />
-            <Button fx:id="doCommandButton" layoutX="375.0" layoutY="268.0" mnemonicParsing="false" onAction="#doCommandButton" text="Do Command" />
-            <TextField fx:id="warehouseNameText" layoutX="213.0" layoutY="24.0" />
-            <TextField fx:id="inputFileText" layoutX="213.0" layoutY="68.0" />
-            <TextField fx:id="fromWarehouseText" layoutX="213.0" layoutY="105.0" />
-            <TextField fx:id="toWarehousetext" layoutX="213.0" layoutY="146.0" />
-            <TextField fx:id="outputFileNameText" layoutX="213.0" layoutY="191.0" />
-            <TextField fx:id="commandText" layoutX="213.0" layoutY="229.0" />
-            <TextField fx:id="commandParamText" layoutX="213.0" layoutY="268.0" />
-            <Label layoutX="104.0" layoutY="28.0" text="Warehouse Name:" />
-            <Label layoutX="113.0" layoutY="72.0" text="Input File Name:" />
-            <Label layoutX="110.0" layoutY="109.0" text="From Warehouse:" />
-            <Label layoutX="124.0" layoutY="150.0" text="To Warehouse:" />
-            <Label layoutX="115.0" layoutY="195.0" text="Output File Name:" />
-            <Label layoutX="144.0" layoutY="233.0" text="Command:" />
-            <Label layoutX="95.0" layoutY="272.0" text="Command Parameter:" />
-            <TextArea fx:id="myTextArea" layoutX="37.0" layoutY="312.0" prefHeight="200.0" prefWidth="435.0" />
-         </children>
-      </Pane>
+      <TabPane fx:id="tabPane" prefHeight="418.0" prefWidth="487.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab fx:id="loginscreenTab" text="Login Screen">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="380.0" prefWidth="487.0">
+                     <children>
+                        <TextField fx:id="usernameTextField" layoutX="94.0" layoutY="101.0" prefHeight="25.0" prefWidth="300.0" />
+                        <Label layoutX="25.0" layoutY="105.0" text="Username:" />
+                        <Label layoutX="27.0" layoutY="134.0" text="Password:" />
+                        <Button fx:id="loginButton" layoutX="221.0" layoutY="168.0" mnemonicParsing="false" onAction="#doLoginButton" text="Login" />
+                        <PasswordField fx:id="passwordTextField" layoutX="94.0" layoutY="130.0" prefHeight="25.0" prefWidth="300.0" />
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab fx:id="systemAdminTab" disable="true" text="System Administrator">
+            <content>
+              <AnchorPane fx:id="AnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="318.0" prefWidth="507.0">
+                     <children>
+                        <Button fx:id="createAccountButton" layoutX="358.0" layoutY="14.0" mnemonicParsing="false" onAction="#doCreateAccount" text="Create Account" />
+                        <Button fx:id="deleteAccountButton" layoutX="358.0" layoutY="76.0" mnemonicParsing="false" onAction="#doDeleteAccount" text="Delete Account" />
+                        <Button fx:id="resetPasswordButton" layoutX="358.0" layoutY="46.0" mnemonicParsing="false" onAction="#doResetPassword" text="Reset Password" />
+                        <TextField fx:id="lastNameAdminText" layoutX="167.0" layoutY="46.0" />
+                        <TextField fx:id="usernameAdminText" layoutX="169.0" layoutY="108.0" />
+                        <TextField fx:id="emailAdminText" layoutX="168.0" layoutY="76.0" />
+                        <TextField fx:id="firstNameAdminText" layoutX="167.0" layoutY="14.0" />
+                        <TextArea fx:id="myTextAreaAdminText" layoutX="87.0" layoutY="203.0" prefHeight="158.0" prefWidth="310.0" />
+                        <Label layoutX="98.0" layoutY="18.0" text="First Name:" />
+                        <Label layoutX="99.0" layoutY="50.0" text="Last Name:" />
+                        <Label layoutX="87.0" layoutY="80.0" text="Email Address:" />
+                        <Label layoutX="103.0" layoutY="112.0" text="Username:" />
+                        <TextField fx:id="passwordAdminText" layoutX="169.0" layoutY="140.0" />
+                        <Label layoutX="111.0" layoutY="144.0" text="Password:" />
+                        <Button fx:id="LogoutButton1" layoutX="380.0" layoutY="108.0" mnemonicParsing="false" onAction="#doLogoutButton1" text="Logout" />
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+            <Tab fx:id="salesAssociateTab" disable="true" text="Sales Associate">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="generateSalesInvoiceButton" layoutX="23.0" layoutY="336.0" mnemonicParsing="false" onAction="#doGenerateSalesInvoice" text="Generate Sales Invoice" />
+                        <Button fx:id="sellPartsButton" layoutX="389.0" layoutY="336.0" mnemonicParsing="false" onAction="#doSellPartsButton" text="Sell Parts" />
+                        <TextField fx:id="salesVanFileNameText" layoutX="181.0" layoutY="36.0" />
+                        <TextField fx:id="CustomerNameAssociateText" layoutX="181.0" layoutY="67.0" />
+                        <TextField fx:id="partNameAssociateText" layoutX="181.0" layoutY="100.0" />
+                        <TextField fx:id="partNumberAssociateText" layoutX="181.0" layoutY="136.0" />
+                        <TextField fx:id="quantityAssociateText" layoutX="181.0" layoutY="172.0" />
+                        <Label layoutX="20.0" layoutY="40.0" text="Sales Van Delivery File Name:" />
+                        <Label layoutX="52.0" layoutY="71.0" text="Customer/Client name:" />
+                        <Label layoutX="113.0" layoutY="104.0" text="Part Name:" />
+                        <Label layoutX="98.0" layoutY="140.0" text="Part Number:" />
+                        <Label layoutX="118.0" layoutY="176.0" text="Quantity:" />
+                        <TextArea fx:id="myTextAreaAssociateText" layoutX="20.0" layoutY="206.0" prefHeight="121.0" prefWidth="449.0" />
+                        <Button fx:id="LogoutButton2" layoutX="394.0" layoutY="45.0" mnemonicParsing="false" onAction="#doLogoutButton2" text="Logout" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </Tab>
+            <Tab fx:id="officeManagerTab" disable="true" text="Office Manager">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="ExaminePartsButton" layoutX="358.0" layoutY="336.0" mnemonicParsing="false" onAction="#doExamineParts" text="Examine Parts" />
+                        <Button fx:id="generateSalesPaycheckButton" layoutX="20.0" layoutY="336.0" mnemonicParsing="false" onAction="#doGenerateSalesPaycheck" text="Generate Sales Paycheck" />
+                        <TextField fx:id="StartDateText" layoutX="82.0" layoutY="20.0" prefHeight="25.0" prefWidth="126.0" />
+                        <TextField fx:id="EndDateText" layoutX="296.0" layoutY="20.0" prefHeight="25.0" prefWidth="122.0" />
+                        <Label layoutX="20.0" layoutY="24.0" text="Start Date:" />
+                        <Label layoutX="244.0" layoutY="24.0" text="End Date:" />
+                        <TextArea fx:id="myTextAreaOfficeText" layoutX="20.0" layoutY="168.0" prefHeight="159.0" prefWidth="449.0" />
+                        <Button fx:id="LogoutButton3" layoutX="391.0" layoutY="139.0" mnemonicParsing="false" onAction="#doLogoutButton3" text="Logout" />
+                        <Button fx:id="refillPartStock" layoutX="206.0" layoutY="336.0" mnemonicParsing="false" onAction="#doRefillPartStock" text="Refill Part Stock" />
+                        <TextField fx:id="salesAssociateName" layoutX="195.0" layoutY="97.0" />
+                        <TextField fx:id="partNameOfficeManager" layoutX="82.0" layoutY="57.0" prefHeight="25.0" prefWidth="126.0" />
+                        <TextField fx:id="partNumberOfficeManager" layoutX="296.0" layoutY="57.0" prefHeight="25.0" prefWidth="123.0" />
+                        <Label layoutX="14.0" layoutY="61.0" text="Part Name:" />
+                        <Label layoutX="220.0" layoutY="61.0" text="Part Number:" />
+                        <Label layoutX="76.0" layoutY="101.0" text="Sales Associte Name:" />
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+            <Tab fx:id="warehouseManagerTab" disable="true" text="Warehouse Manager">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="readWarehouseDeliveryButton" layoutX="23.0" layoutY="301.0" mnemonicParsing="false" onAction="#doReadWarehouseDelivery" text="Read Warehouse Delivery File:" />
+                        <Button fx:id="updateWarehouseInventoryButton" layoutX="273.0" layoutY="301.0" mnemonicParsing="false" onAction="#doUpdateWarehouseInventoryButton" text="Update Warehouse Inventory File:" />
+                        <TextField fx:id="warehouseDeliveryFileText" layoutX="212.0" layoutY="36.0" />
+                        <TextField fx:id="warehouseNameText" layoutX="212.0" layoutY="67.0" />
+                        <Label layoutX="43.0" layoutY="40.0" text="Warehouse Delivery File Name:" />
+                        <Label layoutX="110.0" layoutY="71.0" text="Warehouse Name:" />
+                        <Label layoutX="23.0" layoutY="104.0" />
+                        <TextArea fx:id="myTextAreaWarehouseText" layoutX="19.0" layoutY="121.0" prefHeight="166.0" prefWidth="449.0" />
+                        <Button fx:id="LogoutButton4" layoutX="394.0" layoutY="49.0" mnemonicParsing="false" onAction="#doLogoutButton4" text="Logout" />
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+        </tabs>
+      </TabPane>
    </children>
    <columnConstraints>
       <ColumnConstraints />
