--- a/src/project3/sample.fxml
+++ b/src/project3/sample.fxml
@@ -44,6 +44,13 @@
                         <TextField fx:id="passwordAdminText" layoutX="169.0" layoutY="140.0" />
                         <Label layoutX="111.0" layoutY="144.0" text="Password:" />
                         <Button fx:id="LogoutButton1" layoutX="380.0" layoutY="108.0" mnemonicParsing="false" onAction="#doLogoutButton1" text="Logout" />
+                        <MenuButton fx:id="selectEmployeeButton" layoutX="168.0" layoutY="168.0" mnemonicParsing="false" onAction="#doSelectEmployee" text="Select Employee Type">
+                          <items>
+                            <MenuItem fx:id="selectSalesAssociate" mnemonicParsing="false" text="Sales Associate" />
+                              <MenuItem fx:id="selectWarehouseManager" mnemonicParsing="false" text="Warehouse Manager" />
+                            <MenuItem fx:id="selectOfficeManager" mnemonicParsing="false" text="Office Manager" />
+                          </items>
+                        </MenuButton>
                      </children>
                   </AnchorPane>
             </content>
