--- a/src/project3/sample.fxml
+++ b/src/project3/sample.fxml
@@ -41,16 +41,16 @@
                         <Label layoutX="99.0" layoutY="50.0" text="Last Name:" />
                         <Label layoutX="87.0" layoutY="80.0" text="Email Address:" />
                         <Label layoutX="103.0" layoutY="112.0" text="Username:" />
-                        <TextField fx:id="passwordAdminText" layoutX="169.0" layoutY="140.0" />
                         <Label layoutX="111.0" layoutY="144.0" text="Password:" />
                         <Button fx:id="LogoutButton1" layoutX="380.0" layoutY="108.0" mnemonicParsing="false" onAction="#doLogoutButton1" text="Logout" />
                         <MenuButton fx:id="selectEmployeeButton" layoutX="168.0" layoutY="168.0" mnemonicParsing="false" onAction="#doSelectEmployee" text="Select Employee Type">
                           <items>
-                            <MenuItem fx:id="selectSalesAssociate" mnemonicParsing="false" text="Sales Associate" />
-                              <MenuItem fx:id="selectWarehouseManager" mnemonicParsing="false" text="Warehouse Manager" />
-                            <MenuItem fx:id="selectOfficeManager" mnemonicParsing="false" text="Office Manager" />
+                            <MenuItem fx:id="selectSalesAssociate" mnemonicParsing="false" onAction="#createSalesAssociateAction" text="Sales Associate" />
+                              <MenuItem fx:id="selectWarehouseManager" mnemonicParsing="false" onAction="#createWarehouseManagerAction" text="Warehouse Manager" />
+                            <MenuItem fx:id="selectOfficeManager" mnemonicParsing="false" onAction="#createOfficeManagerAction" text="Office Manager" />
                           </items>
                         </MenuButton>
+                        <PasswordField fx:id="passwordAdminText" layoutX="168.0" layoutY="140.0" />
                      </children>
                   </AnchorPane>
             </content>
