--- a/src/project3/sample.fxml
+++ b/src/project3/sample.fxml
@@ -95,7 +95,7 @@
                         <TextField fx:id="partNumberOfficeManager" layoutX="296.0" layoutY="57.0" prefHeight="25.0" prefWidth="123.0" />
                         <Label layoutX="14.0" layoutY="61.0" text="Part Name:" />
                         <Label layoutX="220.0" layoutY="61.0" text="Part Number:" />
-                        <Label layoutX="76.0" layoutY="101.0" text="Sales Associte Name:" />
+                        <Label layoutX="76.0" layoutY="101.0" text="Sales Associate Name:" />
                      </children>
                   </AnchorPane>
                </content>
