--- a/src/project3/sample.fxml
+++ b/src/project3/sample.fxml
@@ -73,7 +73,7 @@
                         <Label layoutX="118.0" layoutY="176.0" text="Quantity:" />
                         <TextArea fx:id="myTextAreaAssociateText" layoutX="20.0" layoutY="206.0" prefHeight="121.0" prefWidth="449.0" />
                         <Button fx:id="LogoutButton2" layoutX="394.0" layoutY="45.0" mnemonicParsing="false" onAction="#doLogoutButton2" text="Logout" />
-                        <Button fx:id="addSalesVan" layoutX="221.0" layoutY="336.0" mnemonicParsing="false" onAction="#doAddSalesVan" text="Add Sales Van" />
+                        <Button layoutX="221.0" layoutY="336.0" mnemonicParsing="false" text="Add Sales Van" />
                      </children>
                   </AnchorPane>
               </content>
